--- a/src/app/mainpage1/mainpage1.component.html
+++ b/src/app/mainpage1/mainpage1.component.html
@@ -111,7 +111,7 @@
     <br>
     <label>Date: &nbsp; </label>
     <input type="text" formControlName='date'>
-    <span style="color:red" *ngIf="date && date.invalid && date.touched"> This field is required</span>
+    <span style="color:rgb(202, 21, 21)" *ngIf="date && date.invalid && date.touched"> This field is required</span>
     <br>
     <label>Venue: &nbsp; </label>
     <input type="text" formControlName='venue'>
